# epaper-telegram

./: .gitmodules  MANIFEST.in  README.rst  pyproject.toml
src/epaper-telegram/: apps.py
src/epaper_telegram/: __init__.py  apps.py  launchers.py  views.py
src/epaper_telegram/models/: display.py  img_creators.py  mocks.py  online_tools.py  tools.py  touch_epaper.py  waveshare_touch_epaper.py  xmpp.py
tests/: test_display.py  test_img_convertor.py  test_img_creators.py  test_integration.py  test_online_tools.py  test_touch_epaper.py  test_xmpp.py
